# WaplMath/src/main/java/com/tmax/WaplMath/AdditionalLearning/controller/AdditionalLearningController.java
@@ -5,9 +5,11 @@ import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.CrossOrigin;
+import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestHeader;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 import com.tmax.WaplMath.AdditionalLearning.dto.FrequentCardDTO;
@@ -23,10 +25,10 @@ public class AdditionalLearningController {
     @Qualifier("FrequentCardServiceV2")
 	private FrequentCardServiceBaseV1 FrequentCardService;
 
-	@PutMapping(value = "/frequent", produces = "application/json; charset=utf-8")
-	ResponseEntity<Object> FrequentCard(@RequestHeader("token") String token, @RequestBody TodaySubsectionListDTO todaySubsectionList) {
+	@GetMapping(value = "/frequent", produces = "application/json; charset=utf-8")
+	ResponseEntity<Object> FrequentCard(@RequestHeader("token") String token, @RequestParam("isFirstFrequent") boolean isFirstFrequent) {
 		String userId = JWTUtil.getJWTPayloadField(token, "userID");
-		FrequentCardDTO frequentCard = FrequentCardService.getFrequentCard(userId,todaySubsectionList);
+		FrequentCardDTO frequentCard = FrequentCardService.getFrequentCard(userId,isFirstFrequent);
 		return new ResponseEntity<>(frequentCard, HttpStatus.OK);
 	}
 }
