# swagger.yml
@@ -195,15 +195,14 @@ paths:
           $ref: "#/components/responses/500-Generic"
 
   /frequent:
-    put:
+    get:
       tags:
         - Additional Learning
       summary: "빈출카드 추천"
       description: "완벽학습에서 빈출 카드 제공"
       parameters:
         - $ref: "#/components/parameters/UserToken"
-      requestBody:
-        $ref:  "#/components/requestBodies/SubsectionInfo"
+        - $ref:  "#/components/parameters/IsFirstFreq"
       responses:
         "200":
           description: "성공"
@@ -567,24 +566,6 @@ components:
           type: string
           example: Successfully update user basic info.
           description: "성공 여부 메시지"
-    SubsectionInfo:
-      type: object
-      required:
-          - "isFirstFrequent"
-#          - "todaySubsectionList"
-      properties:
-        isFirstFrequent:
-          type: boolean
-          example: true
-          description: "진단고사 직후 첫 접속인지 아닌지 (첫접속 = 1)"
-#        todaySubsectionList:
-#          type: array
-#          description: "진단고사 or 오늘의 학습 카드 내 소단원 리스트"
-#          items:
-#            type: string
-#          example:
-#            - "소인수분해"
-#            - "정수와 유리수"
           
     FrequentCardResult:
       properties:
@@ -691,7 +672,15 @@ components:
           - 2222
           - 3333
           - 4444
-
+    IsFirstFreq :
+      in: path
+      name: isFirstFrequent
+      required: true
+      description: 진단고사 직후 첫 진입 = 1
+      schema:
+        type: boolean
+        default: 0
+        
   requestBodies:
     ProblemSolveRecord:
       description: "학생 문제 풀이 기록"
@@ -719,10 +708,3 @@ components:
           schema:
             $ref:  "#/components/schemas/UserBasicInfo"
             
-    SubsectionInfo:
-      description: "진단고사 여부 & (삭제)오늘 학습 소단원 정보"
-      required: true
-      content:
-        application/json:
-          schema:
-            $ref:  "#/components/schemas/SubsectionInfo"
